--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>616</width>
+    <width>665</width>
     <height>412</height>
    </rect>
   </property>
@@ -14,13 +14,26 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="screen1">
     <property name="geometry">
      <rect>
       <x>6</x>
       <y>12</y>
-      <width>601</width>
-      <height>361</height>
+      <width>321</width>
+      <height>351</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="screen2">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>10</y>
+      <width>321</width>
+      <height>351</height>
      </rect>
     </property>
     <property name="text">
@@ -33,7 +46,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>616</width>
+     <width>665</width>
      <height>21</height>
     </rect>
    </property>
